# vulcraft

./: CMakeLists.txt  LICENSE  README.md  main.cpp
shaders/Triangle/: shader.vert
src/: Engine.cpp  Engine.h  main.cpp  vkengine.cpp  vkengine.h
src/Core/: Device.cpp  Device.h  Instance.cpp  Instance.h  Swapchain.cpp  Swapchain.h  VKEngine.cpp  VKEngine.h  VKengine.cpp  VKengine.h
src/Managers/ImGuiManager/: ImGuiManager.cpp  ImGuiManager.h
src/Managers/VulkanManager/: VulkanManager.cpp  VulkanManager.h
src/Managers/WindowManager/: WindowManager.cpp  WindowManager.h
src/Renderer/: Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Services/WindowManager/: WindowManager.cpp  WindowManager.h
src/Shaders/Triangle/: shader.vert
src/Window/: WindowManager.cpp  WindowManager.h
src/core/: vk.cpp  vk.h  window.cpp  window.h
src/math/: Camera.h  Transform.h
src/renderer/: Buffer.h  Pipeline.h  Renderer.h  Swapchain.h  VulkanContext.h
src/renderer/vulkan/: VulkanContext.cpp  VulkanContext.h
src/resources/: ShaderLoader.h  TextureLoader.h
src/systems/: InputSystem.h
src/utils/: Debug.h  Logger.cpp  Logger.h  LoggerMacros.h
